add media querry for different screen sizes

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
     <title>Homepage</title>
     <link rel="stylesheet" href="./style.css">
 </head>
@@ -19,30 +19,29 @@
     <div class="left">
         <div class="thiswebsite">Welome to where it all started</div>
         <div class="websitedescription">innovative consulting firm specializing in strategic solutions for sutainable growth and oeprational excellence</div>
-        <button class="signuptop" type="button">Sign Up</button>
     </div>
-    <div class="right"><img class="image1" src="./images/image1.jpg" alt="image"></div>
+    <div class="right"><div id="fix"><img class="image1" src="./images/image1.jpg" alt="image"></div></div>
  </div>  
  
     <div class="titlemiddle">Let us offer help our way</div>
     <div class="middle">
         <div class="boxone">
             <div class="boxoneone">
-                <img class="innovation" src="./images/innovaton.jpeg">
+                <img class="innovation" id="imagemiddle" src="./images/innovaton.jpeg">
             </div>
-            <div class="textone">Innovation</div>
+            <div id="textmiddle" class="textone">Innovation</div>
         </div>
         <div class="boxtwo">
-            <div class="boxtwotwo"> <img class="knowledge" src="./images/knowledge.png"></div>
-            <div class="texttwo">Knowledge</div>    
+            <div class="boxtwotwo"> <img class="knowledge" id="imagemiddle" src="./images/knowledge.png"></div>
+            <div id="textmiddle" class="texttwo">Knowledge</div>    
         </div>
         <div class="boxthree">
-            <div class="boxthreethree"><img class="networking" src="./images/networking.jpg"></div>
-            <div class="textthree">Networking</div>
+            <div class="boxthreethree"><img class="networking" id="imagemiddle" src="./images/networking.jpg"></div>
+            <div id="textmiddle" class="textthree">Networking</div>
         </div>
         <div class="boxfour">
-            <div class="boxfourfour"><img class="technology" src="./images/technology.jpg"></div>
-            <div class="textfour">Technology</div>
+            <div class="boxfourfour"><img class="technology" id="imagemiddle" src="./images/technology.jpg"></div>
+            <div id="textmiddle" class="textfour">Technology</div>
         </div>
 
     </div>
@@ -53,7 +52,7 @@
     </div>
     <div class="footer">
        <div class="leftfooter"><div class="call">Call to action! It's time!</div>
-            <div class="footertext">Sign up for our product by clicking that button right over there!</div></div>
+            <div class="footertext">Sign up for our product by clicking this <br>&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; button right over here!</div></div>
             <div class="buttonfooter"><button class="buttonfooter" type="button">Sign Up</button></div>
     </div>
  </div>    
